--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "~12.2.0",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "bootstrap": "^5.1.0",
+    "install": "^0.13.0",
+    "ngx-bootstrap": "^7.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
